setup/addons/vault/tls/vault-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: kube-system
spec:
  ports:
    - name: vaultport
      port: 443
      protocol: TCP
      targetPort: 443
    - name: vaultporthttp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: vault
