setup/addons/vault/tls/vault-ingress.yaml
600apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault
  namespace: kube-system
  labels:
    ssl: "true"
spec:
  rules:
  - host: vault.kube.io
    http:
      paths:
      - backend:
          serviceName: vault
          servicePort: 443
        path: /
